# linked-assembly

./: .gitignore  CONTRIBUTING.md  Cargo.toml  INSTRUCTIONS.md  Makefile  README.md  TODO  run  run.sh  test.bat  test.sh  test_asm.sh  test_lasm.sh  test_lfs.sh  test_ljoke.sh  testb.sh  testbf.sh
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml
.github/workflows/: build-test-macos.yml  build-test-ubuntu.yml  build-test-windows.yml  build-test.yml  build.yml  release-build.yml
build_scripts/: config.mk  os.mk
buildtool poc/: b.yml  toolchain.yml
ci/: archive.py  artifacts.py  build.py  ci.py  os.py
docs/: OVERVIEW.md  architecture.md  faq.md  instructions.md  tutorial.md  usage.md
errors/: lasmp_1.txt
examples/: README.md  cpuid.asm  flags.asm  halt.asm
examples/tests/: debug.sh  test.sh
scripts/: append.bat  append.sh  config.mk  install_build_deps.py  list.bat  list.sh  mkdir.bat  os.mk  rm.bat
src/: version.h
src/asmp/: Makefile  Preprocessor.cpp  Preprocessor.hpp  main.cpp
src/assembler/: Context.hpp  Makefile  (+4 more)
src/buildtool/: Cargo.toml  Makefile  args.rs  build.rs  c.rs  config.rs  execute.rs  init.rs  main.rs  target.rs  util.rs
src/buildtool/args/: args.rs
src/buildtool/cache/: cache.rs
src/buildtool/path/: path.rs
src/buildtool/tools/: tools.rs
src/buildtool/vscode/: vscode.rs
src/buildtool/yaml/: build.rs  config.rs  target_config.rs  vars.rs
test/: compile.sh  main.asm
tests/: debug.sh  inc.asm  run.py  test.asm  test.sh  test1.asm  test2.asm  tests.py
tests_sh/: lbf.sh  lfs.sh
(+360 files in other folders)
