[package]
name = "buildtool"
version = "0.0.0"
edition = "2024"
build = "build.rs"

[dependencies]
glob = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
serde_json = "1.0.143"
walkdir = "2.5.0"
sha2 = "0.10.9"
libc = "0.2.175"

[[bin]]
name = "buildtool"
path = "main.rs"
